--- a/public/single-product.html
+++ b/public/single-product.html
@@ -394,7 +394,8 @@
 
     </header>
     
-    <section class="single-product padding-large">
+    <div id="main-content">
+          <section class="single-product padding-large">
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
@@ -1280,6 +1281,7 @@
       </div>
     </div>
   </div>
+    </div>
     
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
