--- a/public/single-product.html
+++ b/public/single-product.html
@@ -412,7 +412,8 @@
                     <img src="images/product-thumbnail-3.png" alt="product-thumb" class="img-fluid border rounded-3">
                   </div>
                 </div>
-              <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
+              <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+            </div>
               <div class="swiper large-swiper border rounded-3 overflow-hidden swiper-fade swiper-initialized swiper-horizontal swiper-watch-progress swiper-backface-hidden">
                 <div class="swiper-wrapper" id="swiper-wrapper-b873626ddb1dc786" aria-live="polite">
                   <div class="swiper-slide bg-white swiper-slide-active swiper-slide-visible swiper-slide-fully-visible" role="group" aria-label="1 / 3" style="transform: translate3d(0px, 0px, 0px); width: 512px; opacity: 1;">
